[gd_scene load_steps=2 format=3 uid="uid://bwun4m23g5tgb"]

[ext_resource type="Script" path="res://Mina.gd" id="1_csvut"]

[node name="Mina" type="Node"]
script = ExtResource("1_csvut")

[node name="Mineral" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -122.5
offset_right = 20.0
offset_bottom = -99.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30

[node name="Exit" type="Button" parent="."]
offset_left = 37.0
offset_top = 27.0
offset_right = 192.0
offset_bottom = 118.0
size_flags_horizontal = 6
auto_translate = false
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="T1" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.261
anchor_top = 0.501
anchor_right = 0.261
anchor_bottom = 0.501
offset_left = -91.672
offset_top = -45.648
offset_right = 91.328
offset_bottom = 45.352
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Tier 1"

[node name="T2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -45.5
offset_right = 94.0
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Tier 2"

[node name="T3" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.746
anchor_top = 0.5
anchor_right = 0.746
anchor_bottom = 0.5
offset_left = -107.892
offset_top = -45.5
offset_right = 107.108
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Tier 3"

[node name="Title" type="Label" parent="."]
offset_left = 433.0
offset_top = 17.0
offset_right = 719.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 60
text = "Mines"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Rec2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = 76.5
offset_right = 116.5
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Necessites un pic de nivell 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Rec3" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 167.5
offset_top = 76.5
offset_right = 400.5
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Necessites un pic de nivell 3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="T1" to="." method="_on_t_1_pressed"]
[connection signal="pressed" from="T2" to="." method="_on_t_2_pressed"]
[connection signal="pressed" from="T3" to="." method="_on_t_3_pressed"]
